--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ readme = "README.md"
 version = "0.1.0"
 
 [tool.poetry.dependencies]
+defusedxml = "^0.7.1"
 geopandas = "^1.0.1"
 hdx-python-country = "^3.8.3"
 httpx = { version = "^0.27.2", extras = ["http2"] }
